hphp/test/vm/interface1.php.expectf
HipHop Fatal error: Class D contains abstract method (%s) and must therefore be declared abstract or implement the remaining methods in %s on line 8
